# humming

./: README.md  moe_sum_bench.py  pyproject.toml  ruff.toml  workbook.md
benchmarks/: bench_cutlass_w8a8.py  bench_humming.py  bench_marlin.py  bench_tcgen05_vs_wmma.py  bench_torch_w16a16.py  bench_triton_moe.py
docs/: CONFIG.md  config.md
examples/: 4090_large_batch.py  h20_large_batch.py
humming/: dtypes.py  layer.py  ops.py
humming/config/: __init__.py  base.py  config.py  enum.py  mma.py
humming/csrc/launcher/: elf.h  launcher.cpp  tensor.h  tma.h  torch_api.h  utils.h
humming/include/humming/: scheduler.cuh
humming/jit/: __init__.py  compiler.py  runtime.py  utils.py
humming/kernel/: __init__.py  dequant_weight.py  humming.py  pack_weight.py  process_mxfp4.py  quant_input.py  quant_weight.py  repack_weight.py  tops_bench.py  unpack_weight.py
humming/ops/: __init__.py  bench.py  input.py  moe.py  utils.py  weight.py
humming/schema/: __init__.py  awq.py  base.py  bitnet.py  compressed_tensors.py  fp8.py  gpt_oss_mxfp4.py  gptq.py  humming.py  modelopt.py  mxfp4.py
humming/tune/: __init__.py  base.py  sm100.py  sm75.py  sm89.py  sm8x.py  sm90.py  sm90_h20.py
humming/utils/: device.py  smem.py  test.py  weight.py
tests/: baseline_phaseA.tsv  bench_w4a16_baseline.py  test_batch_invariance.py  test_datatype.py  test_epilogue.py  test_f16_accum.py  test_moe.py  test_multi_cast.py  test_pad.py  test_pipeline.py  test_scale.py  test_shape.py  test_sm100_heuristic.py  test_sm100_smoke.py  test_tcgen05.py  test_tcgen05_dtypes.py  test_zero_point.py
(+188 files in other folders)
