[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humming-kernels"
version = "0.1.0a1"
description = "Quantization GEMM Kernel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "triton",
    "safetensors",
    "jinja2",
    "pyelftools",
    "cuda-python"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.cu", "*.cuh", "*.cpp", "*.h", ".hpp"]

[tool.ruff]
line-length = 100
